# xserver-xorg-input-onetouch

./: ChangeLog  Makefile  Makefile.in  README  aclocal.m4  config.h  configure  configure.ac  libtool
doc/: doc.onetouch  onetouch.html  onetouch.info  onetouch.ps  onetouchdoc.txt
src/: Makefile  Makefile.am  Makefile.in  calib-math.c  calib-math.h  onetouch.h  onetouch_control.c  onetouch_to_ascii.c  xf86OneTouch.c
tools/: Makefile  Makefile.am  Makefile.in  onetouch_calib  onetouch_panel
